Corrected typo in friction

--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -168,12 +168,12 @@ To determine which of these scenarios will occur, you should write the equations
 	<p> <b>Given:</b> Fridge weight = 250 lb and <InlineEquation equation=" \\mu_s "/> = 0.4 </p>
 	<p> <b>Find:</b>  The maximum horizontal force P that can be applied without causing movement of the fridge </p>
 
-	<Image src='/Statics/FrictionFigures/FridgeEx.jpg' width='5'></Image>
+	<Image src='/Statics/FrictionFigures/FridgeEx.jpg' width='4'></Image>
 
 	<div slot="solution">
 	<p> Drawing a FBD of the fridge yields: </p>
 
-	<Image src='/Statics/FrictionFigures/FridgeFBD.jpg' width='5'></Image>
+	<Image src='/Statics/FrictionFigures/FridgeFBD.jpg' width='4'></Image>
 
 	<p> We will then use the FBD and equations of equilibrium to solve for the force <InlineEquation equation=" P "/> necessary to make the fridge tip, and make the fridge slip along the surface: </p>
 	
@@ -197,7 +197,7 @@ To determine which of these scenarios will occur, you should write the equations
 	<ul>
 		<li> Min <InlineEquation equation="P" /> for sliding: 100 lb </li>
 		<li> Min <InlineEquation equation="P" /> for tipping: 112.5 lb </li>
-		<li> Fridge will slide at <InlineEquation equation="P=100 // lb" />  </li>
+		<li> Fridge will slide at <InlineEquation equation="P=100 \\ lb" />  </li>
 	</ul>
 
 
