--- a/src/pages/sol/failure_theories.astro
+++ b/src/pages/sol/failure_theories.astro
@@ -113,8 +113,11 @@ Failure of a material depends on (1) nature of loading and (2) type of material.
 
  The equating equation be plotted to show the failure surface. The elliptical surface is the Von Mises surface overlaid with the Teresca surface. Loading conditions that occur <strong>outside</strong> of the surface are when the material fails.
 
-<div id="failure-criteria-container" class="overflow-hidden">
-    
+<div id="failure-criteria-container" class="overflow-hidden d-flex flex-column align-items-center">
+    <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>      
+    <span class="visually-hidden">Loading...</span>
 </div>
 
 <script is:inline>
@@ -122,6 +125,7 @@ Failure of a material depends on (1) nature of loading and (2) type of material.
     $(function(){
 
         var data = $.getJSON("/failure2.json").done(function(){
+            document.querySelector("#failure-criteria-container").innerHTML = "";
             console.log(JSON.parse(data['responseText']))
             Plotly.newPlot("failure-criteria-container", JSON.parse(data['responseText']), {height: 400} ,{responsive: true})})
             Plotly.Plots.resize("failure-criteria-container")
