--- a/src/pages/sol/failure_theories.astro
+++ b/src/pages/sol/failure_theories.astro
@@ -113,6 +113,12 @@ Failure of a material depends on (1) nature of loading and (2) type of material.
 
  The equating equation be plotted to show the failure surface. The elliptical surface is the Von Mises surface overlaid with the Teresca surface. Loading conditions that occur <strong>outside</strong> of the surface are when the material fails.
 
+</SubSection>
+
+<SubSubSection id="failure-surfaces" title="Yield surfaces in principal stress coordinates">
+
+<p>The following figure shows the failure surfaces of Tresca and von Mises criteria in term of the principal stresses. Regions outside the surfaces are considered to have failed. (Note this 3d plot is interactive, click and drag orbit, scroll to zoom, click on legend entries to toggle them on or off.)</p>
+
 <div id="failure-criteria-container" class="overflow-hidden d-flex flex-column align-items-center">
     <div class="spinner-border" role="status">
         <span class="visually-hidden">Loading...</span>
@@ -124,20 +130,39 @@ Failure of a material depends on (1) nature of loading and (2) type of material.
 
     $(function(){
 
-        var data = $.getJSON("/failure2.json").done(function(){
+        const layout = {
+            autosize: true, 
+            width: '100%', 
+            height: 400 
+        };
+
+
+        var data = $.getJSON("/failure.json").done(function(){
             document.querySelector("#failure-criteria-container").innerHTML = "";
             console.log(JSON.parse(data['responseText']))
-            Plotly.newPlot("failure-criteria-container", JSON.parse(data['responseText']), {height: 400} ,{responsive: true})})
+            Plotly.newPlot("failure-criteria-container", JSON.parse(data['responseText']), layout ,{responsive: true})
             Plotly.Plots.resize("failure-criteria-container")
-            //document.querySelector()
         });
 
-        $("body").on("resize", function(){Plotly.Plots.resize("failure-criteria-container")})
-    
-        
+        $(window).on("resize", function(){Plotly.Plots.resize("failure-criteria-container")})
+
+        $( window ).on( "resize", function() {
+            let body_width;
+            body_width = $('body').width();
+            graph_width = body_width - 24;
+            if (body_width < 992){
+                //document.querySelector(`#${id}`).style = `max-width: ${graph_width}px`;
+                document.querySelector(`#failure-criteria-container`).style = `max-width: ${graph_width}px; overflow-x: auto;`;
+            }else{
+                document.querySelector(`#failure-criteria-container`).style = `width: 100%; overflow-x: auto;`
+            }
+            }  
+        );
+
+    });
 </script>
 
-</SubSection>
+</SubSubSection>
 
 <SubSection title="Maximum Normal Stress Criterion" id="max-normal">
 
