--- a/src/pages/sta/shear_moment_diagrams.astro
+++ b/src/pages/sta/shear_moment_diagrams.astro
@@ -12,6 +12,8 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import Item from "../../components/Item.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
+import DisplayEquation from "../../components/DisplayEquation.astro" 
+
 ---
 <Layout title="Shear Force & Bending Moment Diagrams">
 
@@ -103,66 +105,86 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 <SubSection title="General Rules" id="general_rules">
 
 <Enumerate>
-	<Item><strong>Concentrated force or moment: </strong>  there will be a "jump" in the shear force or bending moment diagram.</Item>
+	<Item><strong>Concentrated external force or moment: </strong>  there will be a "jump" in the shear force or bending moment diagram.</Item>
         <Itemize>
             <Item>Upward forces lead to an upward jump in \(V\) equal to the magnitude of the concentrated external force. </Item>
             <Item>Clockwise external moments result in a jump "up" in the graph of \(M\) equal to the magnitude of the concentrated external moment.</Item>       
         </Itemize>
         
-	<Item><strong>Distributed loads:</strong> \(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
+	<Item><strong>Distributed external loads:</strong> \(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
 </Enumerate>
 
 <Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between \(w(x)\), \(V\), and \(M\).</Image>
 
-<DisplayTable id="moi_table">
+<center><em>General rules summary table</em></center>
+
+<DisplayTable id="mvdiag_table">
     <thead>
         <tr>
             <th class="table-shaded">
 		<strong>Diagram</strong>
             </th>
             <th class="table-shaded">
-                <strong>Discontinuities</strong>
+                <strong>Jumps</strong>
             </th>
             <th class="table-shaded"> 
                 <strong>Slope</strong>
             </th>
 	    <th class="table-shaded"> 
-                <strong>Changes</strong>
+                <strong>Integral</strong>
             </th>	
         </tr>
     </thead>
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                <strong>Shear <InlineEquation equation="(V)"/> </strong>
+                <strong>Internal shear<br> force <br><InlineEquation equation="(V)"/> </strong>
             </td>
             <td>
-		A concentrated force results in a discontinuity/jump in <InlineEquation equation="V"/>. An upward (downward) force causes an upward (downward) jump. The magnitude of the jump is equal to the force magnitude. 
-
-		Concentrated moments do not affect the shear diagram.
+                (+) concentrated force <InlineEquation equation="\\rightarrow"/>
+                <br>
+                (+) jump in internal shear force
+                <br>
+                <br>
+                concentrated moment <InlineEquation equation="\\rightarrow"/>
+                no effect
             </td>
 	    <td>
-       		The slope of <InlineEquation equation="V"/> at a point is equal to the value of the distributed load at that point. An upward (downward) distributed load results in a positive (negative) slope.
-	    </td>
+            <DisplayEquation equation="\\frac{dV}{dx} = w(x)" />
+
+            (-) distributed load <InlineEquation equation="\\rightarrow"/>
+            <br>
+            (-) internal shear slope	    
+        </td>
 	    <td>
-		The change in shear between two points is equal to the area under the distributed loading curve between the two points.
-	    </td>
+            <DisplayEquation equation="\\Delta V = V_2 - V_1" />
+            <DisplayEquation equation=" = \\int w(x)dx" />
+            (the area under <br>distributed load curve)	    
+        </td>
         </tr>
     </tbody>
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                <strong>Moment <InlineEquation equation="(M)"/> </strong>
+                <strong>Internal bending moment <br><InlineEquation equation="(M)"/> </strong>
             </td>
             <td>
-		A concentrated moment results in a discontinuity/jump in <InlineEquation equation="M"/>. A clockwise (anti-clockwise) moment causes an upward (downward) jump. The magnitude of the jump is equal to the moment magnitude.
+                (+, CCW) moment <InlineEquation equation="\\rightarrow"/>
+                <br>
+                (-) jump in internal moment            
             </td>
 	    <td>
-       		The slope of <InlineEquation equation="M"/> at a point is equal to the shear at the point. A positive (negative) shear results in a positive (negative) slope.
-	    </td>
+            <DisplayEquation equation="\\frac{dM}{dx} = V(x)" />
+
+            (+) shear force <InlineEquation equation="\\rightarrow"/>
+            <br>
+            (+) internal moment slope 	    
+        </td>
 	    <td>
-		The change is the moment between two points is equal to the area under the shear diagram between the two points.
-	    </td>
+            <DisplayEquation equation="\\Delta M = M_2 - M_1 " />
+            <DisplayEquation equation=" = \\int V(x)dx" />
+            (the area under <br> shear force curve) 	    
+        </td>
         </tr>
     </tbody>
 </DisplayTable>
