--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -189,7 +189,7 @@ To determine which of these scenarios will occur, you should write the equations
 			<p> If  <InlineEquation equation=" x = 18 '' " /> , the fridge would tip. Because <InlineEquation equation=" x = 16 '' " /> , the fridge is not tipping!  </p>
 		</li>
 		<li> Assume tipping, solve for <InlineEquation equation="P" />  
-			<DisplayEquation equation=" \\begin{aligned}  \\sum{F_x} &amp;= 0   \\\\   P - F &amp;= 0  \\\\  P &amp;= F  \\\\ \\sum{F_y} &amp;= 0   \\\\   N - W &amp;= 0  \\\\  N &amp;= W   \\\\  \\sum{M_o} &amp;= 0  \\\\   P_y  - N_x &amp;= 0  \\\\ P &amp;= \\frac{N_x}{y}  = \\frac{W_x}{y}  =  \\frac{250 \\ lb \\ (18 \\ in)}{40 \\ in}  \\\\ p &amp;= 112.5 \\ lb \\quad \\text{for tipping} \\end{aligned}"   /> 
+			<DisplayEquation equation=" \\begin{aligned}  \\sum{F_x} &amp;= 0   \\\\   P - F &amp;= 0  \\\\  P &amp;= F  \\\\ \\sum{F_y} &amp;= 0   \\\\   N - W &amp;= 0  \\\\  N &amp;= W   \\\\  \\sum{M_o} &amp;= 0  \\\\   P_y  - N_x &amp;= 0  \\\\ P &amp;= \\frac{N_x}{y}  = \\frac{W_x}{y}  =  \\frac{250 \\ lb \\ (18 \\ in)}{40 \\ in}  \\\\ P &amp;= 112.5 \\ lb \\quad \\text{for tipping} \\end{aligned}"   /> 
 		</li>
 	</ol>
 	
