--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -768,7 +768,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </p>
 
 <DisplayEquationCustom id="rkc-cp" title="Solution procedure for constrained motion." background="True">
-  <DisplayEquation equation="\\begin{aligned}&amp;\\text{1. Write down constraint equation in terms of distances/positions.} \\\\&amp;\\text{2. Differentiate once or twice with respect to time to obtain} \\\\&amp;\\quad\\text{\\vec{v} and \\vec{a} relationships.} \\\\&amp;\\text{3. Solve for the desired quantity.}\\end{aligned}" />
+  <DisplayEquation equation="\\begin{aligned}&amp;\\text{1. Write down constraint equation in terms of distances/positions.} \\\\&amp;\\text{2. Differentiate once or twice with respect to time to obtain} \\\\&amp; \\quad  \\vec{v} \\quad  \\text{and}  \\ \\vec{a} \\  \\text{relationships.} \\\\&amp;\\text{3. Solve for the desired quantity.}\\end{aligned}" />
 
 </DisplayEquationCustom>
 
@@ -1137,7 +1137,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 	<Image src="/Dynamics/RigidBodyKinematics/GearsSignConvention2.png" width="7"></Image>
 	
 	<ol>
-      <li> <InlineEquation equation="\\omega_{1z}" /> and  <InlineEquation equation="\\omega_{2z}" /> have opposite signs (rotate in opposite direction) </li>
+      <li> <InlineEquation equation="\\vec{\\omega}_{1z}" /> and  <InlineEquation equation="\\vec{\\omega}_{2z}" /> have opposite signs (rotate in opposite direction) </li>
       <li>Smaller gears rotate faster</li>
     </ol>
 
