--- a/src/pages/sol/bending.astro
+++ b/src/pages/sol/bending.astro
@@ -197,18 +197,18 @@ The moment of inertia of the area <InlineEquation equation='A' /> with respect t
 
 
 <SubSubSection title="Moment of Inertia Summary" id="summary-moi">
-    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='5'>  Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/> <br> Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/> </Image>
+    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='7'>  Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/> <br> Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/> </Image>
 
     <DisplayTable class_="text-center" id="inertia-table">
         <thead>
             <tr>
-                <th class="nosideborderleft">
+                <th class="table-shaded" class="nosideborderleft">
                     
                 </th>
-                <th >
+                <th class="table-shaded">
                     <strong>Mass moment of inertia</strong>
                 </th>
-                <th colspan="3">
+                <th class="table-shaded" colspan="3">
                     <strong>Area moment of inertia</strong>
                 </th>
             </tr>
@@ -216,17 +216,17 @@ The moment of inertia of the area <InlineEquation equation='A' /> with respect t
         <tbody>
             <tr>
 
-                <td class="nosideborderleft">
+                <td class="table-shaded" class="nosideborderleft">
                     <strong>Other names</strong>
                 </td>
                     
-                <td>
+                <td class="table-shaded">
                     
                 </td>
 
-                <td>First moment of area</td>
-                <td>Second moment of area</td>
-                <td>Polar moment of area</td>
+                <td class="table-shaded">First moment of area</td>
+                <td class="table-shaded">Second moment of area</td>
+                <td class="table-shaded">Polar moment of area</td>
 
 
             </tr>
