--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -7,6 +7,10 @@ import BlueText from "../../components/BlueText.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 import DisplayTable from "../../components/DisplayTable.astro"
+import Example from "../../components/Example.astro"
+import InlineCanvas from "../../components/InlineCanvas.astro"
+import Row from "../../components/Row.astro"
+import Col from "../../components/Col.astro"
 ---
 <style>
     tr {
@@ -41,7 +45,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 <Section title="Moment of Inertia" id="moments">
 
 <!-- Lecture 33 -->
-<em>Note that in statics we are using the second moment of area as our moment of inertia. In dynamics a different moment of inertia is used (the mass moment of inertia). The differences between these two quantities are summarized in the table below: </em>
+<em>Note:</em> in statics we are using the second moment of area as our moment of inertia. In dynamics, a different moment of inertia is used (the mass moment of inertia). The differences between these two quantities are summarized in the following table. 
 
 <DisplayTable id="moi_table">
     <thead>
@@ -133,23 +137,26 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <SubSection title="Moment of Inertia (Second Moment of Area)" id="second_moment">
 
-The moment of inertia used in statics is the "second moment of area", which is a mass property that determines the amount of torque that is needed to create an angular acceleration about a specific axis of rotation. The dimension of the area moment of inertia is <InlineEquation equation='length^4' />.\\
+The moment of inertia used in statics is the "second moment of area".
+This is a mass property that determines the amount of torque that is needed to create an angular acceleration about a specific axis of rotation. 
+The dimension of the area moment of inertia is <InlineEquation equation='length^4' />.
 
-Moment of inertia about the x-axis:  <DisplayEquation equation='I_x = \\int_{A}^{} y^2 \\,dA \\' />
+<DisplayEquation equation='I_x = \\int_{A}^{} y^2 \\,dA \\' title="Moment of inertia about the x-axis" background="True" />
 
-Moment of inertia about the y-axis: <DisplayEquation equation='I_y = \\int_{A}^{} x^2 \\,dA \\' />
+<DisplayEquation equation='I_y = \\int_{A}^{} x^2 \\,dA \\' title="Moment of inertia about the y-axis" background="True" />
 
-Polar moment of inertia: <DisplayEquation equation='J_O = \\int_{A}^{} r^2 \\,dA = \\int_{A}^{} (x^2+y^2) \\,dA\\' />
-<em>Note that the polar moment of inertia depicts the measure of the distribution of area about a point (usually the origin), rather than about an axis.</em>
+<DisplayEquation equation='J_O = \\int_{A}^{} r^2 \\,dA = \\int_{A}^{} (x^2+y^2) \\,dA\\' title="Polar moment of inertia." background="True" />
+
+<em>Note:</em> the polar moment of inertia depicts the measure of the distribution of area about a point (usually the origin), rather than about an axis.
 
 </SubSection>
 
 <SubSection title="Parallel axis theorem" id="parallel_axis_theorem">
 <p>
-    The parallel axis theorem is used to calculate the moment of inertia for an object around axes other than through the centroid. The parallel axis theorum states: 
+    The parallel axis theorem is used to calculate the moment of inertia for an object around axes other than through the centroid.
 </p>
 
-    <DisplayEquation equation="\\begin{align} I_{x} = I_{x'} + A(d_y)^2 \\\\ I_{y} = I_{y'} + A(d_x)^2 \\end{align}" />
+    <DisplayEquation equation="\\begin{align} I_{x} = I_{x'} + A(d_y)^2 \\\\ I_{y} = I_{y'} + A(d_x)^2 \\end{align}" title="Parallel axis theorem." background="True" />
 <p>
     where <InlineEquation equation="I_{x'}" /> and <InlineEquation equation="I_{y'}" /> are the moments of inertia about the centroid, A is the total area of the shape, and d is the perpendicular distance from the centroid in either the x or y directions.
 </p>
@@ -161,15 +168,42 @@ Polar moment of inertia: <DisplayEquation equation='J_O = \\int_{A}^{} r^2 \\,dA
 Moments of inertia of simple shapes can be combined to calculate the moments of inertia of more complex shapes using the parallel axis theorum. 
 </p>
 
-<p>Example problem: what is the \(I_x\) of the composite shape? </p>
 
-<Image src='/Statics/MOIFigures/MOIComposite.jpg' width='7'></Image>
+
+
+<Example id="blt-fst" title="Find the moment of inertia of the composite." solution="True">
+    <div class="d-flex flex-row">
+      <Row>
+        <Col values="12 md-6">
+          <p>
+            What is the <InlineEquation equation='I_x'/> of the composite shape?
+          </p>
+        </Col>
+        <Col values="12 md-6">
+            <Image src='/Statics/MOIFigures/MOIComposite1.jpg' width='4'></Image>
+  
+        </Col>
+      </Row>
+    </div>
+    <div slot="solution">
+        <p>
+            <DisplayEquation equation="I = I_1 + I_2 - I_3"/>
+            <Image src='/Statics/MOIFigures/MOIComposite2.jpg' width='5'></Image>
+            <DisplayEquation equation="I_1 = I_{x_1'}+A_1y_1^2"/>
+            <DisplayEquation equation="I_2 = I_{x_2'}+A_2y_2^2"/>
+            <DisplayEquation equation="I_3 = I_{x_3'}+A_3y_3^2"/>
+  
+  
+          </p>
+    </div>
+  </Example>
+
 
 </SubSection>
 
 <SubSection title="Moment of inertia for typical shapes" id="typical_shapes">
 
-<Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='5'>  Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/> <br> Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/> </Image>
+<Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='7'>  Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/> <br> Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/> </Image>
 
 </SubSection>
 
