--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -123,7 +123,7 @@ Consider a box of length <i>l</i> that is sitting on a rough surface with an app
 
 As <i>P</i> increases, there are two possible scenarios: either the box will "slip" and start sliding along the surface, or the box will tip onto the right corner.  
 
-<Image src='/Statics/FrictionFigures/TipSlip.jpg' width='5'>tipping vs. slipping</Image>
+<Image src='/Statics/FrictionFigures/TipSlip.png' width='5'>tipping vs. slipping</Image>
 
 <p>
 If the box experiences <b>slipping</b>, the normal force will act at a location <i>x</i> from the center of the box. The frictional force can be written as  <DisplayEquation equation="\F_f = \\mu_s N" /> You can use the other equations of equilibrium to solve for the force <i>P</i> required for the box to slip. 
